# qt

./: CMakeLists.txt  README.md  et --hard HEAD@{1}
src/: main.cpp  shm_data.hpp  shm_data.hpp.bak
src/delegate/: light_delegate.hpp
src/enum/: spindle_operation.h
src/model/: io_model.hpp  motor_config_model.hpp  motor_feb_model.hpp
src/util/: config_manager.hpp  db_writer.hpp  ring_buffer.hpp  shm_manager.hpp  thread_pool.hpp  user_role.h
src/util/password_manager/: password_manager.cpp  password_manager.h
ui/: chart_page.hpp  config_page.hpp  data_monitor_page.hpp  main_window.hpp  param_page.hpp
ui/beside_pass/: besidepass.cpp  besidepass.h  besidepass.ui
ui/blanking/: blanking.cpp  blanking.h  blanking.ui
ui/feeding/: feeding.cpp  feeding.h  feeding.ui
ui/form/: form.cpp  form.h  form.ui
ui/home_page/: homepage.cpp  homepage.h  homepage.ui
ui/main_flyer/: mainflyer.cpp  mainflyer.h  mainflyer.ui
ui/middle_circuit_breaker/: middelcircuitbreaker.cpp  middelcircuitbreaker.h  middelcircuitbreaker.ui
